--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     
     <p>Семинарын ажлууд:</p>
     <ul>
-        <li> <a href="./neuttaa/weather/weather.html">weather api</a></li>
+        <li> <a href="./weather/weather.html">weather api</a></li>
     </ul>
 </body>
