--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Семинарын ажлууд:</p>
     <ul>
         <li> <a href="./weather/weather.html">weather api</a></li>
+        <li> <a href="./systemintegration.html">system integration</a></li>
     </ul>
 </body>
